--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,9 @@
 {
-	"description": "The CodeIgniter framework",
-	"name": "codeigniter/framework",
+	"description": "Codeigniter Base",
+	"name": "normeno/codeigniter-base",
 	"type": "project",
-	"homepage": "https://codeigniter.com",
+	"homepage": "https://normeno.com",
 	"license": "MIT",
-	"support": {
-		"forum": "http://forum.codeigniter.com/",
-		"wiki": "https://github.com/bcit-ci/CodeIgniter/wiki",
-		"irc": "irc://irc.freenode.net/codeigniter",
-		"source": "https://github.com/bcit-ci/CodeIgniter"
-	},
 	"require": {
 		"php": ">=5.2.4",
 		"philo/laravel-blade": "3.*"
