--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,22 @@
 {
-	"description": "Codeigniter Base",
-	"name": "normeno/codeigniter-base",
-	"type": "project",
-	"homepage": "https://normeno.com",
-	"license": "MIT",
-	"require": {
-		"php": ">=5.2.4",
-		"philo/laravel-blade": "3.*",
-		"fzaninotto/faker": "^1.6"
-	},
-	"suggest": {
-		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
-	},
-	"require-dev": {
-		"mikey179/vfsStream": "1.1.*"
-	}
+  "description": "Codeigniter Base",
+  "name": "normeno/codeigniter-base",
+  "type": "project",
+  "homepage": "https://normeno.com",
+  "license": "MIT",
+  "require": {
+    "php": ">=5.2.4",
+    "philo/laravel-blade": "3.*",
+    "fzaninotto/faker": "^1.6",
+    "vlucas/phpdotenv": "^2.4",
+    "tinify/tinify": "^1.3",
+    "nesbot/carbon": "^1.21"
+  },
+  "suggest": {
+    "paragonie/random_compat": "Provides better randomness in PHP 5.x"
+  },
+  "require-dev": {
+    "mikey179/vfsStream": "1.1.*",
+    "maximebf/debugbar": "1.*"
+  }
 }
